--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
+          cat ${{ secrets.TEST_SECRET }} > test_file.txt
           echo $TEST_SECRET
         env:
-          TEST_SECRET: cat ${{ secrets.TEST_SECRET }} > test_file.txt
+          TEST_SECRET: test_file.txt
