--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,6 +19,22 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    services:
+        postgres_db:
+          image: postgres
+          env:
+            POSTGRES_USER: postgres
+            POSTGRES_HOSTNAME: postgres
+            POSTGRES_PASSWORD: postgres
+            POSTGRES_DATABASE: postgres
+          ports:
+            - 5432:5432
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,5 +48,6 @@ jobs:
           echo ${{ secrets.TEST_SECRET }} | base64 --decode 
             > test_file.txt
           cat $TEST_SECRET
+          echo $POSTGRES_USER
         env:
           TEST_SECRET: test_file.txt
