--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,11 +40,18 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Bla
+        run: |
+          source <(echo ${{ secrets.TEST_ENV }} | base64 --decode)
+          echo ${{ secrets.TEST_SECRET }} | base64 --decode 
+            > test_file.txt
+          cat $TEST_SECRET
+          echo $POSTGRES_USER
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          source <(echo ${{ secrets.TEST_ENV }} | base64 --decode)
           echo ${{ secrets.TEST_SECRET }} | base64 --decode 
             > test_file.txt
           cat $TEST_SECRET
