--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,7 +52,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo blabla
+          echo random text
             > test_file.txt
           echo $TEST_SECRET
           echo $POSTGRES_USER
