--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,18 +45,18 @@ jobs:
         run: |
           source <(echo ${{ secrets.TEST_ENV }} | base64 --decode)
           echo ${{ secrets.TEST_SECRET }} | base64 --decode 
-            > test_file.txt
+            > test_file.json
           cat $TEST_SECRET
           echo $POSTGRES_USER
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo ${{ secrets.TEST_SECRET }} 
+          echo ${{ secrets.TEST_SECRET }}
             | base64 --decode 
-            > test_file.txt
+            > test_file.json
           echo $TEST_SECRET
           echo $POSTGRES_USER
         env:
-          TEST_SECRET: test_file.txt
+          TEST_SECRET: test_file.json
           POSTGRES_USER: postgres
