--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,11 +52,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo ${{ secrets.TEST_SECRET }}
-            | base64 --decode 
+          echo ${{ secrets.TEST_SECRET }} | base64 --decode 
             > test_file.json
-          echo $TEST_SECRET
+          echo $TEST_VAR
           echo $POSTGRES_USER
         env:
-          TEST_SECRET: test_file.json
+          TEST_VAR: test_file.json
           POSTGRES_USER: postgres
