--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,10 +52,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo ${{ secrets.TEST_SECRET }} | base64 --decode 
-            > test_file.json
+          echo ${{ secrets.TEST_SECRET }} | base64 --decode > test_file.json
           echo $TEST_VAR
           echo $POSTGRES_USER
         env:
-          TEST_VAR: test_file.json
+          TEST_VAR: "test_file.json"
           POSTGRES_USER: postgres
