--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,7 +52,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo ${{ secrets.TEST_SECRET }} | base64 --decode > test_file.json
+          echo ${{ secrets.DICTIONARY_WITH_MULTIPLE_LINES }} | base64 --decode > test_file.json
           echo $TEST_VAR
           echo $POSTGRES_USER
         env:
