--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,11 +48,16 @@ jobs:
             > test_file.json
           cat $TEST_SECRET
           echo $POSTGRES_USER
+          
+      - name: Testing if source works on this step
+        run: |
+          echo $POSTGRES_USER
+          echo $RANDOM_VAR
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo ${{ secrets.DICTIONARY_DECODED }} | base64 --decode > test_file.json
+          echo ${{ secrets.DICTIONARY_WITH_MULTIPLE_LINES }} | base64 --decode > test_file.json
           echo $TEST_VAR
           echo $POSTGRES_USER
         env:
