Add step on CI that will fail

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -17,3 +17,11 @@ jobs:
           echo "------------------------------"
           echo "RUNNING CONTINUOUS INTEGRATION"
           echo "------------------------------"
+      
+      - name: Fail step
+        run: |
+          echo "------------------------------"
+          echo "THIS STEP WILL FAIL"
+          echo "------------------------------"
+
+          exit 1
