--- a/.github/workflows/make_release_branch.yml
+++ b/.github/workflows/make_release_branch.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.PAT }}
 
     steps:
       - name: Checkout Repository
