CI on push main and pr

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -1,11 +1,11 @@
 name: Continuous Integration
 
-on: [push]
-  # push:
-  #   branches: [main]
+on:
+  push:
+    branches: [main]
 
-  # pull_request:
-  #   branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   print_random_stuff:
